# vem-deep-learning-framework

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tree.txt
docs/powerpoint/Acc_PPT_Standard_Templates_2025/: Acc_PPT_IMP_Tmplt_Arial_Fixed-Accessibility_2025.potx  Acc_PPT_IMP_Tmplt_Graphik_Fixed-Accessibility_2025.potx
docs/thesis/: main.tex  referencias.bib
docs/word/: Adaptive Hybrid VEM-Deep Learning for Two-Dimensional Structural Problems with Uncertainty Estimation and PINN Comparison (MODIFICADO).docx  Adaptive Hybrid VEM-Deep Learning for Two-Dimensional Structural Problems with Uncertainty Estimation and PINN Comparison (ORIGINAL).docx  revisao.docx  ~$aptive Hybrid VEM-Deep Learning for Two-Dimensional Structural Problems with Uncertainty Estimation and PINN Comparison (ORIGINAL).docx
src/: __init__.py  paths.py  teste.py
src/COLOCAR_NAS_PASTAS_CERTAS/: converter.py  dataloader.py  hypersearch.py  models.py  npz_converter.py  npz_splitter.py  pre_process_dataset.py  train-Copy1.py  trainable.py  tune_asha.py
